Improved razor renderer

--- a/xrc/Script/TODO.txt
+++ b/xrc/Script/TODO.txt
@@ -4,7 +4,7 @@
 // http://www.csscript.net
 // C# 5.0 Compiler
 // IronPython/IronRuby
-// Razor Engine ?
+// Razor Engine http://razorengine.codeplex.com/
 
 // Attualmente uso http://www.fidelitydesign.net/?p=333  (Converting String expressions to Funcs with FunctionFactory by Matthew Abbott)
 // di cui bisogna valutare bene performance e eventuali memory leak
